wine32/TODO
* build fails when using curses in base:

../../../programs/wineconsole/curses.c:128:14: error: 'acs_map' undeclared here (not in a function); did you mean '_acs_map'?
 MAKE_FUNCPTR(acs_map)
              ^
../../../programs/wineconsole/curses.c:91:39: note: in definition of macro 'MAKE_FUNCPTR'
 #define MAKE_FUNCPTR(f) static typeof(f) * p_##f;
                                       ^
gmake[1]: *** [Makefile:177: curses.o] Error 1

* tests fail:

gmake[1]: Entering directory '/usr/pkgsrc/emulators/wine32/work/wine-4.4/dlls/bcrypt/tests'
gcc -c -o bcrypt.o bcrypt.c -I. -I../../../include -D__WINESRC__ -D_REENTRANT -fPIC -Wall -pipe \
  -fno-strict-aliasing -Wdeclaration-after-statement -Wempty-body -Wignored-qualifiers \
  -Wshift-overflow=2 -Wstrict-prototypes -Wtype-limits -Wunused-but-set-parameter -Wvla \
  -Wwrite-strings -Wpointer-arith -Wlogical-op -gdwarf-2 -gstrict-dwarf -fno-omit-frame-pointer \
  -I/usr/pkg/include -I/usr/pkg/include/ncurses -I/usr/pkg/include/freetype2 -I/usr/include \
  -O2 -pipe -g -D_FORTIFY_SOURCE=2 -I/usr/pkg/include -I/usr/pkg/include/ncurses -I/usr/pkg/include/freetype2 -I/usr/include -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0
<command-line>:0:0: warning: "_FORTIFY_SOURCE" redefined
<command-line>:0:0: warning: "_FORTIFY_SOURCE" redefined
<command-line>:0:0: note: this is the location of the previous definition
<command-line>:0:0: note: this is the location of the previous definition
bcrypt.c: In function 'test_aes':
bcrypt.c:638:70: error: macro "__ssp_bos_check3" passed 19 arguments, but takes just 4
     memcpy(mode, BCRYPT_CHAIN_MODE_GCM, sizeof(BCRYPT_CHAIN_MODE_GCM));
                                                                      ^
In file included from /usr/include/string.h:127:0,
                 from ../../../include/winnt.h:30,
                 from ../../../include/windef.h:279,
                 from ../../../include/windows.h:37,
                 from bcrypt.c:24:
bcrypt.c:638:5: error: '__ssp_bos_check3' undeclared (first use in this function); did you mean '__stpcpy_chk'?
     memcpy(mode, BCRYPT_CHAIN_MODE_GCM, sizeof(BCRYPT_CHAIN_MODE_GCM));
     ^
bcrypt.c:638:5: note: each undeclared identifier is reported only once for each function it appears in
gmake[1]: *** [Makefile:167: bcrypt.o] Error 1
gmake[1]: Leaving directory '/usr/pkgsrc/emulators/wine32/work/wine-4.4/dlls/bcrypt/tests'
gmake: *** [Makefile:8627: dlls/bcrypt/tests] Error 2
